# llvm-jit

./: .gitignore  CMakeLists.txt
LLVMJIT/: CMakeLists.txt
LLVMJIT/src/: LLVMCompile.cpp
src/: LLVMJIT.cpp  LLVMJITPrivate.h  LLVMModule.cpp  Thunk.cpp
